# noscreenshot

./: .eslintrc.cjs  .gitattributes  .gitignore  .prettier.cjs  .prettierrc  README.md  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish-macos.yml  publish-not-macos.yml  publish.yml  tests.yml
src/: command.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  face.rs  main.rs  tracing_config.rs  tray.rs  window.rs
src/apis/: index.ts
src/components/: Greet.vue
src/locales/: i18n.ts
src/router/: index.ts
src/views/: Home.vue  ScreenCaptureAccessHelp.vue  Screenshot.vue
