[package]
name = "noscreenshot"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["clipboard-all", "dialog-confirm", "dialog-message", "global-shortcut-all", "os-all", "protocol-asset", "shell-open", "system-tray", "window-close", "window-create", "window-minimize", "window-show", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
screenshots = "0.5"
percent-encoding = "2"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3", features = ["json", "env-filter", "local-time"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "*"
# todo: if release version change to core-graphics
cgnew = { git = "https://github.com/servo/core-foundation-rs.git", branch = "master", package="core-graphics" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
